--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="refresh" content="0; url=/WINDOWS.html">
+    <meta http-equiv="refresh" content="0; url=WINDOWS.md">
     <meta name="robots" content="noindex">
     <title>Redirecting...</title>
 </head>
 <body>
-    <p>If you are not redirected automatically, follow this <a href="/WINDOWS.html">link to WINDOWS.md</a>.</p>
+    <p>If you are not redirected automatically, follow this <a href="WINDOWS.md">link to WINDOWS.md</a>.</p>
 </body>
 </html>
