--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="refresh" content="0; url=WINDOWS.md">
+    <meta http-equiv="refresh" content="0; url=https://gideon-yebei.github.io/se-assignment-1-setting-up-your-developer-environment-Gideon-Yebei/WINDOWS.md">
     <meta name="robots" content="noindex">
     <title>Redirecting...</title>
 </head>
